# parallel_rl_benchmarks

./: .gitignore  Dockerfile  README.md  fib.py  pong_ray.py
1.Number_of_Actors/: actors2.py  actors4.py
1.Number_of_Actors/lf_src_file/: workers16.lf  workers2.lf  workers4.lf  workers8.lf
1.Number_of_Actors/visualization/: data_processing.py  plot.py
1.Number_of_Actors/workers16/: _clientreactor.c  _serverreactor.c  _serverreactor.h  normal.py
1.Number_of_Actors/workers2/: _clientreactor.c  _serverreactor.c  _workers2_main.c  _workers2_main.h  workers2.c  workers2.py
1.Number_of_Actors/workers4/: CompileDefinitions.txt  _clientreactor.h  _serverreactor.c  _serverreactor.h  _workers4_main.c  workers4.c
1.Number_of_Actors/workers8/: CMakeLists.txt  _clientreactor.c  _serverreactor.h  _workers8_main.h
2.Object_Size/: 100kb_ray.py  100mb_ray.py  1kb_ray.py  300mb_ray.py  500mb_ray.py
2.Object_Size/lf_src_file/: workers16.lf
2.Object_Size/object_size/: __lf_gendelay_0.c  _clientreactor.h  object_100kb.py  object_10mb.py  object_1kb.py
3.Gym_Environments/: blackjack_ray.py  cartpole_ray.py  pendulum_ray.py
3.Gym_Environments/lf_src_file/: sample_efficiency.lf
3.Gym_Environments/sample_efficiency/: _envreactor.c  _envreactor.h  _sample_efficiency_main.c  _sample_efficiency_main.h  _serverreactor.c  blackjack_lf.py  cartpole_lf.py  pendulum_lf.py
3.Gym_Environments/vectorized/: blackjack_vectorized.py  pendulum_vectorized.py  serial_blackjack.py
3.Gym_Environments/visualization/: sample_eff_benchmark.xlsx
4.Atari_Environments/: pacman_ray.py  pong_ray.py  spaceinvader_ray.py
4.Atari_Environments/sample_efficiency/: pacman_lf.py  pong_lf.py  spaceinvader_lf.py
4.Atari_Environments/vectorized/: pong_vectorized.py
4.Atari_Environments/visualization/: sample_eff_benchmark.xlsx
5.Parallel_Q_learning/lf_src_file/: DQN_blackjack.lf  DQN_deterministic.lf
5.Parallel_Q_learning/sample_1000/: blackjack_dqn_train.py  blackjack_dqn_train_deterministic.py
5.Parallel_Q_learning/sample_2000/: blackjack_dqn_train.py  blackjack_dqn_train_deterministic.py
5.Parallel_Q_learning/sample_250/: blackjack_dqn_train.py  blackjack_dqn_train_deterministic.py
5.Parallel_Q_learning/sample_500/: blackjack_dqn_train.py  blackjack_dqn_train_deterministic.py
5.Parallel_Q_learning/visualization/: benchmarks.xlsx
6.Multi_Agent_Inference/lf_src_file/: trafficv10.lf  trafficv4.lf
Distributed_RL_template/: Distributed RL Graph.lf
atari_sample_efficiency/: pacman_ray.py  pong_ray.py  spaceinvader_ray.py
atari_sample_efficiency/sample_efficiency/: CMakeLists.txt  CompileDefinitions.txt  __lf_gendelay_0.c  _serverreactor.h  pacman_lf.py  pong_lf.py  sample_efficiency.c  spaceinvader_lf.py
atari_sample_efficiency/visualization/: sample_eff_benchmark.xlsx  visualization.py
cpugpu/: pong_gpu_ray.py
cpugpu/pong_gpu/: CMakeLists.txt  __lf_gendelay_0.c  _serverreactor.h  pong_gpu.py
marl/lf/: _serverreactor.c  _serverreactor.h  _trafficv4_main.c
marl/ray/: traffic_infer.py
marl_10/lf/: CMakeLists.txt  _clientreactor.c  _clientreactor.h  _serverreactor.c  _serverreactor.h  _trafficv10_main.h  policy_agent_4.pth  policy_agent_5.pth  (+2 more)
num_actors/: actors8.py
object_size/: 10mb_ray.py
policy_gradient/: pong_torch.py
resource_utilization/: data_processing.py  monitor_resources.sh  resource utilization.xlsx  usage_log.csv  visualization.py
rl_example/: pong_env.py  pong_ray.py  pong_ray_3.py  pong_ray_deep.py
rl_example/pong_lf_6/: CMakeLists.txt  CompileDefinitions.txt  _clientreactor.c  _clientreactor.h  _pong_lf_main.c  _serverreactor.c  _serverreactor.h  pong_lf.py
rl_example/pong_lf_6/include/pong_lf/: ClientReactor.h
sample_batch/: CMakeLists.txt  _sample_batch_main.h  _serverreactor.c  _serverreactor.h  blackjack_batch_ray.py  cartpole_batch_ray.py  pendulum_batch_ray.py  sample_batch.c  sample_batch.py  sample_batch_benchmark.xlsx
sample_efficiency/: blackjack_ray.py  blackjack_vectorized.py  cartpole_ray.py  pendulum_ray.py  sample_eff_benchmark.xlsx  ~$sample_eff_benchmark.xlsx
training/: blackjack_train.py
(+236 files in other folders)
